# wgpu-gen4ids

./: Cargo.toml
.github/workflows/: build.yml
src/: lib.rs
